# fargo

./: Cargo.toml  README.md  gn_grammar.txt  rustfmt.toml
cratest/: Cargo.toml
cratest/src/: main.rs
fargo-test/: Cargo.toml
fargo-test/src/: main.rs
fargo-test/test/: bork_bork.rs
scripts/: build_cairo_support.sh
src/: build_fidl_crates.rs  cargo_interop.rs  cross.rs  device.rs  facade.rs  gn_deps.rs  lib.rs  main.rs  sdk.rs  update_crates.rs  utils.rs
