[package]
name = "fargo"
version = "0.1.0"
authors = ["Rob Tsuk <robtsuk@google.com>"]

[dependencies]
clap = "2"
error-chain = "0.11.0"
uname = "0.1.1"
notify = "4.0.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.5"

[[bin]]
name = "fargo"
doc = false

[workspace]
members = [ "cratest", "fargo-test",]
